# green-orange

./: .dockerignore  .env.authentik.example  .env.production.example  .gitignore  .mcp.json  .prettierignore  .prettierrc  AGENTS.md  Caddyfile  DEPLOY.md  README.md  docker-compose.authentik.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  init-letsencrypt.sh  init-multiple-databases.sh  metadata.json  package.json  turbo.json
.claude/: backend-code-style.md  code-review.md  settings.json
.github/: pull_request_template.md
.husky/: pre-push
apps/crm-api/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  package.json  pyproject.toml
apps/crm-api/alembic/: env.py
apps/crm-api/alembic/versions/: 27167724b317_initial_schema.py  2feb4251c10e_contacts.py  435345c857b5_projects.py  5daf8d41f06b_contacts.py  a1b2c3d4e5f6_projects_optional_dates_costs.py  b7d2c9a4e1f8_rename_customer_to_client.py
apps/crm-api/app/: main.py  seed.py
apps/crm-api/app/api/: deps.py
apps/crm-api/app/api/routes/: auth.py  clients.py  contacts.py  customers.py  deals.py  leads.py  projects.py  tasks.py
apps/crm-api/app/core/: config.py  db.py  security.py
apps/crm-api/app/models/: __init__.py  client.py  contact.py  customer.py  deal.py  lead.py  project.py  task.py  user.py
apps/crm-api/tests/: test_clients.py  test_contacts.py  test_customers.py  test_oidc.py  test_projects.py
deploy/: deploy.env
docs/: authentik-cross-app-sso.md  authentik-headless-login-future.md  authentik-oidc-milestone.md  authentik-user-management-future.md
(+424 files in other folders)
